CREATE TABLE IF NOT EXISTS mpaa_ratings (
    id   INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    code VARCHAR(10) NOT NULL UNIQUE
);

CREATE TABLE IF NOT EXISTS genres (
    id   INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR(100) NOT NULL UNIQUE
);

CREATE TABLE IF NOT EXISTS users (
    id       INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    email    VARCHAR(255) NOT NULL UNIQUE,
    login    VARCHAR(255) NOT NULL UNIQUE,
    name     VARCHAR(255),
    birthday DATE NOT NULL
);

CREATE TABLE IF NOT EXISTS films (
    id               INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name             VARCHAR(255) NOT NULL,
    description      VARCHAR(200),
    release_date     DATE NOT NULL,
    duration         INTEGER NOT NULL,
    mpaa_rating_id   INTEGER REFERENCES mpaa_ratings (id)
);

CREATE TABLE IF NOT EXISTS film_genre (
    film_id  INTEGER NOT NULL REFERENCES films (id) ON DELETE CASCADE,
    genre_id INTEGER NOT NULL REFERENCES genres (id) ON DELETE CASCADE,
    PRIMARY KEY (film_id, genre_id)
);

CREATE TABLE IF NOT EXISTS user_friends (
    user_id   INTEGER NOT NULL REFERENCES users (id) ON DELETE CASCADE,
    friend_id INTEGER NOT NULL REFERENCES users (id) ON DELETE CASCADE,
    status    VARCHAR(20) NOT NULL,
    PRIMARY KEY (user_id, friend_id)
);

CREATE TABLE IF NOT EXISTS film_likes (
    film_id INTEGER NOT NULL REFERENCES films (id) ON DELETE CASCADE,
    user_id INTEGER NOT NULL REFERENCES users (id) ON DELETE CASCADE,
    PRIMARY KEY (film_id, user_id)
);

CREATE INDEX IF NOT EXISTS idx_films_mpaa_rating_id ON films (mpaa_rating_id);
CREATE INDEX IF NOT EXISTS idx_film_genre_film_id ON film_genre (film_id);
CREATE INDEX IF NOT EXISTS idx_film_genre_genre_id ON film_genre (genre_id);
CREATE INDEX IF NOT EXISTS idx_user_friends_user_id ON user_friends (user_id);
CREATE INDEX IF NOT EXISTS idx_user_friends_friend_id ON user_friends (friend_id);
CREATE INDEX IF NOT EXISTS idx_film_likes_film_id ON film_likes (film_id);
CREATE INDEX IF NOT EXISTS idx_film_likes_user_id ON film_likes (user_id);
